# dactyl-keyboard

./: .gitignore  README.md  pyproject.toml
src/: dactyl_manuform.py
src/dactyl_keyboard/: generate.py
