[tool.poetry]
name = "dactyl-keyboard"
version = "0.1.0"
description = ""
authors = ["Adrian Hill"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
solidpython = "^1.1.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black  = { version = "*", allow-prereleases = true }
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.3.1"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
pep8-naming = "^0.11.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
codecov = "^2.1.11"
rope = "^0.18.0"
pylint = "^2.7.3"
ipykernel = "^5.5.0"
isort = "^5.8.0"

[tool.isort]
profile = "black"
multi_line_output = 3 
known_first_party = "innvestigate"
known_local_folder = "tests"
force_single_line = "True"
group_by_package = "True"
force_alphabetical_sort_within_sections = "True"

[tool.poetry.scripts]
# test-data-innvestigate = "src/dactyl_manuform:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
